删除旧的Ptr,完善新的PullLayout

--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_debug.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_debug.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:indicator_display_mode="scroll_with_content"
-    app:pull_direction="both_left_right">
+    app:pull_direction="both_top_bottom">
+
 
     <FrameLayout
         android:id="@id/id_content_view"
@@ -26,16 +27,25 @@
 
     </FrameLayout>
 
+    <com.github.evan.common_utils.ui.view.pullable_view.indicator.ClassicRefreshIndicator
+        android:id="@id/id_top_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:time_flag="ptr_at_fragment_debug"
+        app:direction_drawable="@mipmap/ic_arrow_bottom"
+        app:progress_drawable="@mipmap/icon_loading_small"
+        app:progress_rotation_direction="2"
+        app:progress_rotation_duration="1000" />
 
-    <com.github.evan.common_utils.ui.view.pullable_view.indicator.VerticalTimeFlagIndicator
-        android:id="@id/id_left_indicator"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
-
-    <com.github.evan.common_utils.ui.view.pullable_view.indicator.VerticalTimeFlagIndicator
-        android:id="@id/id_right_indicator"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+    <com.github.evan.common_utils.ui.view.pullable_view.indicator.ClassicRefreshIndicator
+        android:id="@id/id_bottom_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:time_flag="ptr_at_fragment_debug"
+        app:direction_drawable="@mipmap/ic_arrow_top"
+        app:progress_drawable="@mipmap/icon_loading_small"
+        app:progress_rotation_direction="2"
+        app:progress_rotation_duration="1000" />
 
 
 </com.github.evan.common_utils.ui.view.pullable_view.PullLayout>
