--- a/CommonLibProject/CommonUtils/src/main/res/values/attrs.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/values/attrs.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <declare-styleable name="ClassicRefreshIndicator">
+        <attr name="time_flag" format="string"/>
+        <attr name="progress_drawable" format="reference"/>
+        <attr name="direction_drawable" format="reference"/>
+        <attr name="progress_rotation_direction" format="integer"/>
+        <attr name="progress_rotation_duration" format="integer"/>
+    </declare-styleable>
+
     <declare-styleable name="PullLayout">
         <attr name="pull_direction" format="enum">
             <enum name="unknown" value="-1"/>
@@ -42,27 +50,6 @@
 
     </declare-styleable>
 
-    <declare-styleable name="PtrLayout">
-        <attr name="indicator_id" format="reference" />
-        <attr name="content_id" format="reference" />
-        <attr name="ad_view_id" format="reference" />
-        <attr name="slide_dumping" format="float" />
-        <attr name="release_line_of_indicator_height_multiple" format="float" />
-        <attr name="roll_back_to_idle_duration" format="integer" />
-        <attr name="roll_back_to_refreshing_duration" format="integer" />
-        <attr name="auto_refresh_duration" format="integer" />
-    </declare-styleable>
-
-    <declare-styleable name="BaseIndicator">
-        <attr name="progress_drawable" format="reference" />
-        <attr name="progress_rotation_duration" format="integer" />
-        <attr name="is_progress_rotation_when_drag" format="boolean" />
-        <attr name="progress_rotation_direction" format="enum">
-            <enum name="clockwise" value="0" />
-            <enum name="anti_clockwise" value="1" />
-        </attr>
-    </declare-styleable>
-
     <declare-styleable name="GifView">
         <attr name="gif" format="reference" />
         <attr name="paused" format="boolean" />
@@ -70,10 +57,6 @@
 
     <declare-styleable name="CustomTheme">
         <attr name="gifViewStyle" format="reference" />
-    </declare-styleable>
-
-    <declare-styleable name="TimeFlagIndicator">
-        <attr name="update_time_flag" format="string" />
     </declare-styleable>
 
     <declare-styleable name="NestingTabLayout">
