修复PullLayout横滑标记不变BUG，晚上横向Indicator

--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_debug.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_debug.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:indicator_display_mode="scroll_with_content"
-    app:pull_direction="both_top_bottom">
+    app:pull_direction="both_left_right">
 
 
     <FrameLayout
@@ -27,22 +27,22 @@
 
     </FrameLayout>
 
-    <com.github.evan.common_utils.ui.view.pullable_view.indicator.ClassicRefreshIndicator
-        android:id="@id/id_top_indicator"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <com.github.evan.common_utils.ui.view.pullable_view.indicator.ClassicRefreshHorIndicator
+        android:id="@id/id_left_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         app:time_flag="ptr_at_fragment_debug"
-        app:direction_drawable="@mipmap/ic_arrow_bottom"
+        app:direction_drawable="@mipmap/ic_arrow_right"
         app:progress_drawable="@mipmap/icon_loading_small"
         app:progress_rotation_direction="2"
         app:progress_rotation_duration="1000" />
 
-    <com.github.evan.common_utils.ui.view.pullable_view.indicator.ClassicRefreshIndicator
-        android:id="@id/id_bottom_indicator"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <com.github.evan.common_utils.ui.view.pullable_view.indicator.ClassicRefreshHorIndicator
+        android:id="@id/id_right_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         app:time_flag="ptr_at_fragment_debug"
-        app:direction_drawable="@mipmap/ic_arrow_top"
+        app:direction_drawable="@mipmap/ic_arrow_left"
         app:progress_drawable="@mipmap/icon_loading_small"
         app:progress_rotation_direction="2"
         app:progress_rotation_duration="1000" />
