--- a/CommonLibProject/CommonUtils/src/main/res/layout/indicator_classic_pro_hor.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/layout/indicator_classic_pro_hor.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
     android:gravity="center"
-    android:paddingBottom="25dp"
-    android:paddingTop="25dp">
+    android:paddingLeft="25dp"
+    android:paddingRight="25dp">
 
 
     <LinearLayout
@@ -19,6 +19,7 @@
             android:id="@+id/txt_title_indicator_classic_pro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:ems="1"
             android:text="@string/pulling"
             android:textColor="@color/text_color_gray"
             android:textSize="14sp"
@@ -31,8 +32,8 @@
         android:id="@+id/ic_progress_indicator_classic_pro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="left|center_vertical"
-        android:layout_marginLeft="50dp"
+        android:layout_gravity="top|center_horizontal"
+        android:layout_marginTop="50dp"
         android:src="@mipmap/icon_loading_small" />
 
 
