--- a/CommonLibProject/CommonUtils/src/main/res/layout/indicator_classic_pro.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/layout/indicator_classic_pro.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/Grey_Material_Design_300_saturation"
     android:gravity="center"
     android:paddingBottom="25dp"
     android:paddingTop="25dp">
@@ -20,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/pulling"
-            android:textColor="@color/text_color_gray"
+            android:textColor="@color/text_color_black"
             android:textSize="14sp"
             android:textStyle="bold" />
 
