--- a/CommonLibProject/CommonUtils/src/main/res/values/colors.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/values/colors.xml
@@ -19,11 +19,12 @@
     <color name="text_color_light_black">#767676</color>
     <color name="text_color_gray">#757575</color>
     <color name="text_color_white">#FFFFFF</color>
+    <color name="text_color_light_white">#D5D5D5</color>
 
     <!-- 常用分割线颜色 -->
     <color name="divider_color_gray">#BDBDBD</color>
-
     <color name="background_black">#000000</color>
+    <color name="background_dark_gray">#444444</color>
 
     <color name="light_gray">#F1F1F1</color>
 
