--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_pull_layout_with_view_group.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_pull_layout_with_view_group.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:divider="@drawable/shape_alpha_divider_vertical"
+    android:background="@color/White"
     android:orientation="vertical"
     android:showDividers="middle">
 
