--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_debug.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_debug.xml
@@ -4,15 +4,23 @@
     android:id="@+id/pullable_parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:can_scroll_overstep_indicator="true"
+    app:damping="0.7"
     app:indicator_display_mode="scroll_with_content"
-    app:pull_direction="both_top_bottom">
+    app:pull_direction="top_to_bottom">
 
+    <com.github.evan.common_utils.ui.view.pullable_view.indicator.GifCourierIndicator
+        android:id="@id/id_top_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:floating_classic_indicator_arrow_drawable="@mipmap/ic_ios_refresh_arrow"
+        app:floating_classic_indicator_progress_drawable="@drawable/animation_loading_frame"
+        app:floating_classic_indicator_time_flag="classic_floating_refresh_hor_indicator_in_debug_fragment" />
 
     <FrameLayout
         android:id="@id/id_content_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"
         android:background="@color/Red">
 
         <LinearLayout
@@ -44,20 +52,5 @@
 
     </FrameLayout>
 
-    <com.github.evan.common_utils.ui.view.pullable_view.indicator.ClassicProRefreshIndicator
-        android:id="@id/id_top_indicator"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:pro_indicator_progress_drawable="@mipmap/icon_loading_small"
-        app:pro_indicator_progress_rotation_direction="right"
-        app:pro_indicator_progress_rotation_duration="1000" />
-
-    <com.github.evan.common_utils.ui.view.pullable_view.indicator.ClassicProRefreshIndicator
-        android:id="@id/id_bottom_indicator"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:pro_indicator_progress_drawable="@mipmap/icon_loading_small"
-        app:pro_indicator_progress_rotation_direction="right"
-        app:pro_indicator_progress_rotation_duration="1000" />
 
 </com.github.evan.common_utils.ui.view.pullable_view.PullLayout>
