--- a/CommonLibProject/CommonUtilsDemo/src/main/res/values/arrays.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/values/arrays.xml
@@ -24,4 +24,10 @@
         <item>可以</item>
         <item>禁止</item>
     </array>
+    <array name="task_stack_menu">
+        <item>@string/standard_mode</item>
+        <item>@string/single_top_mode</item>
+        <item>@string/single_instance_mode</item>
+        <item>@string/single_task_mode</item>
+    </array>
 </resources>
