--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_about_activity.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/fragment_about_activity.xml
@@ -46,8 +46,7 @@
                 app:cardElevation="5dp"
                 app:cardPreventCornerOverlap="false"
                 app:cardUseCompatPadding="true"
-                app:layout_columnWeight="1"
-                app:layout_rowWeight="1">
+                app:layout_columnWeight="1">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -70,8 +69,7 @@
                 app:cardElevation="5dp"
                 app:cardPreventCornerOverlap="false"
                 app:cardUseCompatPadding="true"
-                app:layout_columnWeight="1"
-                app:layout_rowWeight="1">
+                app:layout_columnWeight="1">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -95,8 +93,7 @@
                 app:cardElevation="5dp"
                 app:cardPreventCornerOverlap="false"
                 app:cardUseCompatPadding="true"
-                app:layout_columnWeight="1"
-                app:layout_rowWeight="1">
+                app:layout_columnWeight="1">
 
                 <TextView
                     android:layout_width="wrap_content"
