--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_shared_preference.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_shared_preference.xml
@@ -12,7 +12,7 @@
 
 
         <android.support.v7.widget.CardView
-            android:id="@+id/card_design_mode_singleton"
+            android:id="@+id/card_create_sp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:foreground="?android:attr/selectableItemBackground"
@@ -28,7 +28,30 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:text="@string/singleton"
+                android:text="@string/create_sp"
+                android:textColor="@color/text_color_black"
+                android:textSize="16sp" />
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_commit_sp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:minHeight="100dp"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardUseCompatPadding="true"
+            app:layout_columnWeight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="@string/commit_sp"
                 android:textColor="@color/text_color_black"
                 android:textSize="16sp" />
 
@@ -36,7 +59,7 @@
 
 
         <android.support.v7.widget.CardView
-            android:id="@+id/card_design_mode_observer"
+            android:id="@+id/card_apply_sp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:foreground="?android:attr/selectableItemBackground"
@@ -52,14 +75,38 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:text="@string/observer"
+                android:text="@string/apply_sp"
+                android:textColor="@color/text_color_black"
+                android:textSize="16sp" />
+
+        </android.support.v7.widget.CardView>
+
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_get_sp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:minHeight="100dp"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardUseCompatPadding="true"
+            app:layout_columnWeight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="@string/get_sp"
                 android:textColor="@color/text_color_black"
                 android:textSize="16sp" />
 
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
-            android:id="@+id/card_design_mode_factory"
+            android:id="@+id/card_view_sp_doc"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:foreground="?android:attr/selectableItemBackground"
@@ -75,7 +122,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:text="@string/factory_mode"
+                android:text="@string/view_sp_doc"
                 android:textColor="@color/text_color_black"
                 android:textSize="16sp" />
 
@@ -83,6 +130,4 @@
 
 
     </android.support.v7.widget.GridLayout>
-
-
 </LinearLayout>
