更新约束布局

--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_constraint_layout.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_constraint_layout.xml
@@ -1,16 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
     <ImageView
-        app:layout_constraintTop_creator="1"
+        android:id="@+id/portrait"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/portrait"
+        android:src="@mipmap/portrait_01"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/list_item_title"
+        app:layout_constraintLeft_toRightOf="@+id/portrait"
+        app:layout_constraintTop_toTopOf="@+id/portrait" />
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/list_item_desc"
+        app:layout_constraintBottom_toBottomOf="@+id/portrait"
+        app:layout_constraintLeft_toRightOf="@+id/portrait"
+        app:layout_constraintRight_toRightOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
