--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_constraint_layout.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_constraint_layout.xml
@@ -5,6 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/banner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
+        android:src="@mipmap/logo_android"
+        app:layout_constraintDimensionRatio="16::9"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <ImageView
         android:id="@+id/portrait"
@@ -12,11 +23,14 @@
         android:layout_height="wrap_content"
         android:src="@mipmap/portrait_01"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/banner" />
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
         android:text="@string/list_item_title"
         app:layout_constraintLeft_toRightOf="@+id/portrait"
         app:layout_constraintTop_toTopOf="@+id/portrait" />
@@ -24,10 +38,63 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:text="@string/list_item_desc"
         app:layout_constraintBottom_toBottomOf="@+id/portrait"
         app:layout_constraintLeft_toRightOf="@+id/portrait"
         app:layout_constraintRight_toRightOf="parent" />
 
+    <View
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintVertical_bias="0.9"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@color/Pink"
+        android:layout_width="50dp"
+        android:layout_height="50dp"/>
+
+    <TextView
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        android:id="@+id/tab1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/Pink"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="@string/tab1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/tab2" />
+
+    <TextView
+        android:id="@+id/tab2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/Pink"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="@string/tab2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintLeft_toRightOf="@id/tab1"
+        app:layout_constraintRight_toLeftOf="@+id/tab3" />
+
+    <TextView
+        android:id="@+id/tab3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/Pink"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="@string/tab3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintLeft_toRightOf="@id/tab2"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
