--- a/CommonLibProject/CommonUtilsDemo/src/main/res/menu/menu_main_navigation.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/menu/menu_main_navigation.xml
@@ -14,6 +14,7 @@
         <item android:id="@+id/functionNetwork" android:title="@string/network_information" android:icon="@drawable/selector_wifi_black" />
         <item android:id="@+id/functionWebView" android:title="@string/web_view" android:icon="@drawable/selector_web_black" />
         <item android:id="@+id/functionDataSave" android:title="@string/data_save" android:icon="@drawable/selector_db_black" />
+        <item android:id="@+id/functionCache" android:title="@string/about_cache" android:icon="@drawable/selector_cache_black" />
         <item android:id="@+id/functionDesignMode" android:title="@string/design_mode" android:icon="@drawable/selector_design_mode_black" />
         <item android:id="@+id/functionAboutAnimation" android:title="@string/about_animation" android:icon="@drawable/selector_animation_black" />
         <item android:id="@+id/functionAboutViewGroup" android:title="@string/view_group" android:icon="@drawable/selector_screen_adaptation_black" />
