--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_lru_cache.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_lru_cache.xml
@@ -10,6 +10,28 @@
         android:layout_height="match_parent"
         app:columnCount="2">
 
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_about_lru_cache"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:minHeight="100dp"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardUseCompatPadding="true"
+            app:layout_columnWeight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="@string/init_lru_cache"
+                android:textColor="@color/text_color_black"
+                android:textSize="16sp" />
+
+        </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:id="@+id/card_init_lru_cache"
@@ -56,30 +78,6 @@
                 android:textSize="16sp" />
 
         </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/card_lru_cache_remove"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:minHeight="100dp"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="5dp"
-            app:cardPreventCornerOverlap="false"
-            app:cardUseCompatPadding="true"
-            app:layout_columnWeight="1">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="@string/remove"
-                android:textColor="@color/text_color_black"
-                android:textSize="16sp" />
-
-        </android.support.v7.widget.CardView>
-
 
         <android.support.v7.widget.CardView
             android:id="@+id/card_lru_cache_used_memory"
