--- a/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_constraint_layout.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/layout/activity_constraint_layout.xml
@@ -28,37 +28,103 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:text="@string/list_item_title"
         app:layout_constraintLeft_toRightOf="@+id/portrait"
         app:layout_constraintTop_toTopOf="@+id/portrait" />
 
     <TextView
+        android:id="@+id/description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="5dp"
         android:text="@string/list_item_desc"
         app:layout_constraintBottom_toBottomOf="@+id/portrait"
         app:layout_constraintLeft_toRightOf="@+id/portrait"
         app:layout_constraintRight_toRightOf="parent" />
 
-    <View
-        app:layout_constraintHorizontal_bias="0.9"
-        app:layout_constraintVertical_bias="0.9"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <TextView
+        android:id="@+id/small_pink_rec"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:background="@color/Pink"
-        android:layout_width="50dp"
-        android:layout_height="50dp"/>
+        android:gravity="center"
+        android:text="@string/base_line_test"
+        app:layout_constraintHorizontal_bias="0.7"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/description" />
 
     <TextView
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@color/Yellow"
+        android:gravity="center"
+        android:text="@string/base_line_test"
+        app:layout_constraintBaseline_toBaselineOf="@id/small_pink_rec"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/portrait" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guide_line"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/vertical_guide_line"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.1" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/Green"
+        android:gravity="center"
+        android:padding="5dp"
+        android:text="@string/guide_line_test"
+        app:layout_constraintHorizontal_bias="0.7"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guide_line"
+        app:layout_constraintVertical_bias="0.1" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="5dp"
+        android:text="@string/absolute_test"
+        app:layout_constraintLeft_toLeftOf="@id/vertical_guide_line"
+        app:layout_constraintTop_toTopOf="@id/guide_line"
+        app:layout_editor_absoluteX="30dp" />
+
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:layout_marginRight="32dp"
+        android:backgroundTint="@color/colorAccent"
+        android:padding="10dp"
+        android:src="@drawable/selector_settings_white"
+        app:fabSize="normal"
+        app:layout_constraintBottom_toTopOf="@+id/tab3"
+        app:layout_constraintRight_toRightOf="parent"
+        app:pressedTranslationZ="20dp"
+        app:rippleColor="#1f000000" />
+
+    <TextView
         android:id="@+id/tab1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -67,6 +133,7 @@
         android:padding="10dp"
         android:text="@string/tab1"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/tab2" />
